Fix spacing on process section

--- a/css/styles.css
+++ b/css/styles.css
@@ -759,7 +759,7 @@ Responsive Web Coding - 768px by 1024px (Tablet)
 	}
 
 	.process_flex_item{
-		max-width: 350px;
+		max-width: 290px;
 	}
 
 	.ow_process_container {
@@ -894,6 +894,10 @@ Responsive Web Coding - 1366px by 768px (Laptop)
 	/*About Page */
 	.about-h2 {
 		top: 40%;
+	}
+
+	.process_flex_item{
+		max-width: 350px;
 	}
 }
 
